--- a/scss/imports/scss/_toolbar.scss
+++ b/scss/imports/scss/_toolbar.scss
@@ -65,7 +65,6 @@
     opacity: 1;
     margin-bottom: 2px;
     -webkit-transform: scale(0.8);
-    -webkit-transition: 0.15s all cubic-bezier(.44,.19,0,.99);
 }
 
 .toolbutton:hover, .toolbutton.active {
